[package]
name = "devto-content"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "3.1", features = ["derive", "env"] }
convert_case = "0.5"
http = "0.2"
inflections = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
isahc = { version = "1.7", features = ["json"] }
